A bunch of minor changes that were found with "findbugs"